# ignor

./: .gitignore  main.py  pyproject.toml  requirements.txt  vercel.json
ignor/: app.py  schemas.py  settings.py
ignor/routes/: root.py  templates.py
tests/: test_app.py
